--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   cupertino_icons: ^1.0.8
   http: ^1.4.0
   shared_preferences: ^2.5.3
+  flutter_secure_storage: ^9.2.4
+  crypto: ^3.0.6
 
 dev_dependencies:
   flutter_test:
