--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,7 +41,9 @@ dependencies:
   firebase_core: ^4.0.0
   firebase_messaging: ^16.0.0
   flutter_local_notifications: ^19.4.0
-
+  path_provider: ^2.1.5
+  open_file: ^3.5.10
+  
 
 dev_dependencies:
   flutter_test:
